# toolkit

./: .gitignore  package.json
js/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
js/playground/: package.json  prettier.config.cjs  tailwind.config.js  tsconfig.json
js/playground/src/: App.tsx  TestForm.tsx  api.ts  data.tsx  index.css  index.tsx  utils.ts
js/playground/src/components/: AssignDialog.tsx  BatchTransferDrawer.tsx  BookingTable.tsx  ClusterTable.tsx  ConfirmationDialog.tsx  Dialog.tsx  DropdownMenu.tsx  EditBookingDialog.tsx  EditInvoiceDialog.tsx  InvoiceTable.tsx  MoneyBadge.tsx  MoreMenu.tsx  Skeleton.tsx  StatusBadge.tsx  Tooltip.tsx
js/playground/src/filters-rql/: parser.js
js/playground/src/pages/: TestForm.tsx  TestTable.tsx
js/playground/src/utils/: useSearchParamState.tsx
js/src/: App.tsx  index.css  index.tsx
js/src/forms/components/: Button.tsx  Dynamic.tsx  Popover.tsx
js/src/forms/components/fields/: BooleanField.tsx  Field.tsx  FileField.tsx  HiddenField.tsx  (+4 more)
js/src/forms/examples/: TestForm.tsx
js/src/motions/examples/: Motions.tsx
js/utils/: classnames.ts  isBlob.ts  isMultipleSelect.ts  mergeEventHandlers.ts  mergeProps.ts  setNativeInputValue.ts  useControllableState.tsx
python/: pyproject.toml
python/filters/: parser.py  query.py  types.py
python/filters/integrations/: django.py
python/filters/parsers/: base.py  github.py
python/filters/tests/: test_github_parser.py
research/: customizations.md  filters.md  forms.md  permissions.md
(+20 files in other folders)
