[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["Nico Knoll"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.1"
black = {extras = ["d"], version = "^24.4.2"}
pyparsing = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
